# data-processing-demo

./: .gitignore  Dockerfile  DockerfileCelery  README.MD  docker-compose.yml  pyproject.toml  pyproject_celery.toml  sample_data.csv
src/api/: main.py  models.py
src/api/routers/: dependencies.py  files.py  responses.py
src/celery/: tasks.py  worker.py
src/mongo/: models.py  query.py
src/utils/: parse_record.py
